--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-audio-player",
+  "name": "react-native-audio-manager",
   "version": "0.1.0",
   "description": "Audio player library for react native Android",
   "main": "AudioPlayer.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/MarkfiveLab/react-native-audio-player.git"
+    "url": "git+ssh://git@github.com/Tricy/react-native-audio-manager.git"
   },
   "keywords": [
     "react-component",
@@ -21,7 +21,10 @@
   "author": "Tricy Inc. <hi@tricy.io> (https://tricy.io)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MarkfiveLab/react-native-audio-player/issues"
+    "url": "https://github.com/Tricy/react-native-audio-manager/issues"
   },
-  "homepage": "https://github.com/MarkfiveLab/react-native-audio-player#readme"
+  "homepage": "https://github.com/Tricy/react-native-audio-manager#readme",
+  "dependencies": {
+    "react-native": "^0.12.0"
+  }
 }
